Added JaCoCo to report unit test code coverage